--- a/src/assets/scss/_transaction-view.scss
+++ b/src/assets/scss/_transaction-view.scss
@@ -49,9 +49,8 @@ $card-title-color: #5B9BE1;
 
     &__item {
       position: relative;
-      margin-left: 20px;
       border-bottom: 1px solid rgba(0,0,0,0.15);
-      padding: 10px 50px 10px 0;
+      padding: 10px 50px 10px 20px;
 
       &__label {
         margin-bottom: 2px;
