--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -124,7 +124,7 @@ $color-orange: #F16C00;
         margin-left: 75px;
 
         @media only screen and (max-width: 1440px) {
-          margin-left: 50px;
+          margin-left: 40px;
         }
 
         .daterangepicker {
@@ -336,7 +336,7 @@ $color-orange: #F16C00;
 
           @media only screen and (max-width: 1440px) {
             width: 50%;
-            max-width: 275px;
+            max-width: 280px;
           }
         }
 
@@ -412,14 +412,14 @@ $color-orange: #F16C00;
       &__dropdown {
         display: inline-block;
         margin-right: 40px;
+        margin-left: 5px;
         box-sizing: border-box;
         width: 260px;
 
         @media only screen and (max-width: 1440px) {
-          margin-top: 15px;
-          margin-right: 0;
+          margin: 15px 0 0;
           width: 50%;
-          max-width: 275px;
+          max-width: 280px;
           padding-left: 5px;
         }
 
@@ -467,9 +467,10 @@ $color-orange: #F16C00;
     }
 
     input-autocomplete {
+      width: 320px;
       @media only screen and (max-width: 1440px) {
         width: 50%;
-        max-width: 275px;
+        max-width: 280px;
       }
     }
   }
@@ -630,5 +631,9 @@ $color-orange: #F16C00;
         cursor: pointer;
       }
     }
+  }
+
+  &__boxes {
+    margin-top: 20px;
   }
 }
