--- a/src/app/pages/dashboard-page/input-autocomplete/input-autocomplete.component.html
+++ b/src/app/pages/dashboard-page/input-autocomplete/input-autocomplete.component.html
@@ -1,5 +1,5 @@
 <div class="input-autocomplete">
-  <md-input class="dashboard__filters__advanced__large first" placeholder="{{title}}" [value]="value" (input)="input($event)"></md-input>
+  <md-input #inputField class="dashboard__filters__advanced__large first" placeholder="{{title}}" (input)="input($event)"></md-input>
   <div class="input-autocomplete__suggestions">
     <div class="input-autocomplete__suggestions__item" *ngFor="let suggestion of suggestions" (click)="select(suggestion)">
       <div class="input-autocomplete__suggestions__item__image">{{suggestion.type.substring(0,1).toUpperCase()}}</div>
