--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -166,7 +166,7 @@ $color-orange: #F16C00;
       }
 
       &__input {
-        transition: 0.2s ease-in-out;
+        transition: 0.75s ease-in-out;
         width: calc(100% - 100px);
 
         @media only screen and (max-width: 1440px) {
@@ -177,7 +177,7 @@ $color-orange: #F16C00;
         &--advanced {
           @media only screen and (min-width: 1441px) {
             transform: translateY(100px);
-            transition: 0.5s ease-in-out;
+            transition: 0.75s ease-in-out;
           }
 
           md-input {
@@ -314,6 +314,13 @@ $color-orange: #F16C00;
 
     &__advanced {
       margin: 0 5px;
+      height: 190px;
+      transition: height 0.75s cubic-bezier(0.35, 0, 0.25, 1);
+      overflow: hidden;
+
+      &--inactive {
+        height: 0 !important;
+      }
 
       &__row {
         display: flex;
