Add dropdown animation to advanced search component

--- a/src/assets/scss/_advanced-search.scss
+++ b/src/assets/scss/_advanced-search.scss
@@ -1,5 +1,13 @@
 .advanced-search {
   position: relative;
+  overflow: hidden;
+  height: 515px;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  transition: height 0.75s cubic-bezier(0.35, 0, 0.25, 1);
+
+  &--inactive {
+    height: 0 !important;
+  }
 
   &__title {
     padding: 20px 60px;
@@ -15,7 +23,6 @@
     width: 46px;
     height: 46px;
     border-radius: 50%;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
     background-color: #5999E0;
     color: white;
     z-index: 1;
