--- a/src/app/pages/search-page/advanced-search/advanced-search.component.html
+++ b/src/app/pages/search-page/advanced-search/advanced-search.component.html
@@ -1,4 +1,4 @@
-<div class="advanced-search">
+<div class="advanced-search" [class.advanced-search--inactive]="!active">
   <div class="advanced-search__title">Advanced Search</div>
 
   <div class="advanced-search__icon"><md-icon>search</md-icon></div>
