--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="search__content">
-      <advanced-search *ngIf="showAdvancedSearch"></advanced-search>
+      <advanced-search [active]="showAdvancedSearch"></advanced-search>
 
       <div class="search__content__title">
         <span>Search Results
