Add coming-soon page (v1)

--- a/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.html
+++ b/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.html
@@ -4,7 +4,7 @@
     <div class="dashboard__reports__title__sub">Popular reports to monitor metrics</div>
   </div>
 
-  <div class="dashboard__reports__item">
+  <div class="dashboard__reports__item" [routerLink]="['/reports', 'order']">
     <div class="dashboard__reports__item__image"></div>
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Order Report</div>
@@ -12,7 +12,7 @@
     </div>
   </div>
 
-  <div class="dashboard__reports__item">
+  <div class="dashboard__reports__item" [routerLink]="['/reports', 'transaction']">
     <div class="dashboard__reports__item__image"></div>
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Transactions Report</div>
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="dashboard__reports__item">
+  <div class="dashboard__reports__item" [routerLink]="['/reports', 'fulfillment']">
     <div class="dashboard__reports__item__image"></div>
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Fulfillment Report</div>
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="dashboard__reports__item">
+  <div class="dashboard__reports__item" [routerLink]="['/reports', 'affiliate']">
     <div class="dashboard__reports__item__image"></div>
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Affiliate Report</div>
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <div class="dashboard__reports__item">
+  <div class="dashboard__reports__item" [routerLink]="['/reports', 'retention']">
     <div class="dashboard__reports__item__image"></div>
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Retention</div>
