--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="dashboard__filters__icons">
-          <md-icon>link</md-icon>
+          <share-link [shareUrl]="getShareUrl()"></share-link>
           <md-icon>more_vert</md-icon>
         </div>
       </div>
@@ -102,6 +102,7 @@
       </div>
 
       <div class="dashboard__filters__advanced-button">
+        <span *ngIf="showResetButton()" (click)="resetFilters()">RESET</span>
         <span *ngIf="!advanced" (click)="toggleAdvanced()">ADVANCED</span>
         <span *ngIf="advanced" (click)="toggleAdvanced()">CLOSE</span>
       </div>
