--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -128,6 +128,7 @@
     </div>
 
     <div class="dashboard__boxes">
+      <movers-card></movers-card>
       <dashboard-reports></dashboard-reports>
     </div>
   </div>
