Few design fixes on dashboard movers component

--- a/src/app/pages/dashboard-page/movers-card/movers-card.component.html
+++ b/src/app/pages/dashboard-page/movers-card/movers-card.component.html
@@ -1,19 +1,18 @@
 <div class="movers-card">
   <div class="movers-card__title">
-    <div class="movers-card__title__main">Watch List</div>
-    <div class="movers-card__title__sub">Items on the move</div>
+    <div class="movers-card__title__main">Campaigns Watch List</div>
+    <div class="movers-card__title__sub">Campaigns on the move</div>
     <md-icon>more_vert</md-icon>
   </div>
 
-  <div class="movers-card__container" [style.height]="calculateHeight()">
-    <div *ngFor="let campaign of campaignDelta" class="movers-card__item">
+  <div class="movers-card__container" [style.height]="height">
+    <div *ngFor="let campaign of campaignDelta" [routerLink]="['/campaigns', campaign.campaignId]" class="movers-card__item">
       <div class="movers-card__item__text">
         <div class="movers-card__item__text__main">{{campaign.campaignName}}</div>
-        <div class="movers-card__item__text__sub">{{campaign.campaignName}}</div>
+        <div class="movers-card__item__text__sub">{{campaign.campaignId.substring(0, 8) + '...'}}</div>
       </div>
 
       <div class="movers-card__item__data">
-        <div class="movers-card__item__data__amount"><span>USD</span></div>
         <div [class.dec]="isDecing(campaign)" class="movers-card__item__data__percentage">
           <span>{{campaign.percentageChangeAmount}} ({{campaign.percentageChangeCount}})</span>
           <md-icon>{{isDecing(campaign) ? 'arrow_downward' : 'arrow_upward'}}</md-icon>
@@ -22,5 +21,5 @@
     </div>
   </div>
 
-  <div #toggleButton class="movers-card__actions" (click)="toggleShowAll()">{{showAll ? 'VIEW LESS' : 'VIEW MORE'}}</div>
+  <div class="movers-card__actions">VIEW MORE</div>
 </div>
